--- a/public/styles.css
+++ b/public/styles.css
@@ -1,66 +1,65 @@
 @font-face {
-  font-family: 'Oxygen Mono';
-  font-style: normal;
-  font-weight: 400;
-  display: swap;
-  src: url(/fonts/OxygenMono.woff2) format('woff2');
-  unicode-range: U+0000-00FF;
+    font-family: 'Oxygen Mono';
+    font-style: normal;
+    font-weight: 400;
+    display: swap;
+    src: url(/fonts/OxygenMono.woff2) format('woff2');
+    unicode-range: U+0000-00FF;
 }
 
 @font-face {
-  font-family: 'Josefin Sans';
-  font-style: normal;
-  font-weight: 400;
-  display: swap;
-  src: url(/fonts/JosefinSans.woff2) format('woff2');
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    display: swap;
+    src: url(/fonts/JosefinSans.woff2) format('woff2');
 }
 
-
 :root {
-  color-scheme: dark;
+    color-scheme: dark;
 
-  --font-header: 'Oxygen Mono', 'Courier New', Courier, monospace;
-  --font-body: 'Josefin Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-header: 'Oxygen Mono', 'Courier New', Courier, monospace;
+    --font-body: 'Josefin Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-  --font-size-small: 0.875rem;
-  --font-size-medium: 1rem;
-  --font-size-large: 1.5rem;
-  --font-size-xl: 2.25rem;
+    --font-size-small: 0.875rem;
+    --font-size-medium: 1rem;
+    --font-size-large: 1.5rem;
+    --font-size-xl: 2.25rem;
 
-  --unit-size: .75rem;
-  --unit-size-1-2: calc(var(--unit-size) / 2);
-  --unit-size-2: calc(var(--unit-size) * 2);
-  --unit-size-3: calc(var(--unit-size) * 3);
-  --unit-size-4: calc(var(--unit-size) * 4);
+    --unit-size: 0.75rem;
+    --unit-size-1-2: calc(var(--unit-size) / 2);
+    --unit-size-2: calc(var(--unit-size) * 2);
+    --unit-size-3: calc(var(--unit-size) * 3);
+    --unit-size-4: calc(var(--unit-size) * 4);
 
-  --radius-small: .5rem;
-  --radius-large: .75rem;
-  --radius-full: 100rem;
+    --radius-small: 0.5rem;
+    --radius-large: 0.75rem;
+    --radius-full: 100rem;
 
-  --colour-primary: #4FFFD3;
-  --colour-on-primary: #000000;
-  --colour-background: #FFFFFF;
-  --colour-text: #104537;
-  --colour-border: #29695940;
+    --colour-primary: #4fffd3;
+    --colour-on-primary: #000000;
+    --colour-background: #ffffff;
+    --colour-text: #104537;
+    --colour-border: #29695940;
 
-  --colour-github: #000000;
-  --colour-linkedin: #0077b5;
-  --colour-facebook: #0866ff;
-  --colour-discord: #5865F2;
-  --colour-boardgamegeek: #ff5100;
-  --colour-cults3d: #822ef5;
-  --colour-gentrack: #00dd88;
-  --colour-proquip: #f8ca10;
-  --colour-melbourneuniversity: #040c44;
+    --colour-github: #000000;
+    --colour-linkedin: #0077b5;
+    --colour-facebook: #0866ff;
+    --colour-discord: #5865f2;
+    --colour-boardgamegeek: #ff5100;
+    --colour-cults3d: #822ef5;
+    --colour-gentrack: #00dd88;
+    --colour-proquip: #f8ca10;
+    --colour-melbourneuniversity: #040c44;
 }
 
 /* dark theme */
-[data-theme="dark"] {
-  --colour-background: #182825;
-  --colour-text: #D7F2EC;
-  --colour-border: #D7F2EC40;
-  
-  --colour-github: #ffffff;
+[data-theme='dark'] {
+    --colour-background: #182825;
+    --colour-text: #d7f2ec;
+    --colour-border: #d7f2ec40;
+
+    --colour-github: #ffffff;
 }
 
 /* ===================== CSS Reset ===================== */
@@ -68,33 +67,35 @@
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  height: 100%;
-  scroll-behavior: smooth;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  accent-color: var(--colour-primary);
+    height: 100%;
+    scroll-behavior: smooth;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    accent-color: var(--colour-primary);
 }
 
 body {
-  min-height: 100%;
-  line-height: var(--unit-size-2);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--colour-background);
-  font-family: var(--font-body);
-  font-size: var(--font-size-medium);
-  line-height: var(--unit-size-2);
-  color: var(--colour-text);
-  transition: color .25s ease, background-color .25s ease;
+    min-height: 100%;
+    line-height: var(--unit-size-2);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: var(--colour-background);
+    font-family: var(--font-body);
+    font-size: var(--font-size-medium);
+    line-height: var(--unit-size-2);
+    color: var(--colour-text);
+    transition:
+        color 0.25s ease,
+        background-color 0.25s ease;
 }
 
 img,
@@ -102,16 +103,16 @@ picture,
 video,
 canvas,
 svg {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
 
 input,
 button,
 textarea,
 select {
-  font: inherit;
-  color: currentColor;
+    font: inherit;
+    color: currentColor;
 }
 
 p,
@@ -121,372 +122,382 @@ h3,
 h4,
 h5,
 h6 {
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 /* ===================================================== */
 
 h1 {
-  font-family: var(--font-header);
-  font-size: var(--font-size-xl);
-  line-height: var(--unit-size-4);
+    font-family: var(--font-header);
+    font-size: var(--font-size-xl);
+    line-height: var(--unit-size-4);
 }
 
 h2,
 h3,
 a {
-  display: block;
-  font-family: var(--font-header);
-  font-size: var(--font-size-medium);
-  line-height: var(--unit-size-2);
-  border-radius: 2px;
-  text-transform: lowercase;
+    display: block;
+    font-family: var(--font-header);
+    font-size: var(--font-size-medium);
+    line-height: var(--unit-size-2);
+    border-radius: 2px;
+    text-transform: lowercase;
 }
 
 a {
-  color: var(--colour-text);
-  text-decoration: underline;
-  transition: scale .25s ease;
+    color: var(--colour-text);
+    text-decoration: underline;
+    transition: scale 0.25s ease;
 }
 
 a:is(:hover, :focus-visible) {
-  color: var(--colour-on-primary) !important;
-  background-color: var(--colour-primary) !important;
-  outline: auto;
-  cursor: pointer;
+    color: var(--colour-on-primary) !important;
+    background-color: var(--colour-primary) !important;
+    outline: auto;
+    cursor: pointer;
 }
 
 hr {
-  flex-grow: 1;
-  height: 1px;
-  max-height: 1px;
-  border: none;
-  background-color: var(--colour-border)
+    flex-grow: 1;
+    height: 1px;
+    max-height: 1px;
+    border: none;
+    background-color: var(--colour-border);
 }
 
 section,
 span {
-  width: 100%;
+    width: 100%;
 }
 
 hgroup,
 footer {
-  display: flex;
-  position: sticky;
-  align-items: center;
-  gap: var(--unit-size);
-  top: 0;
-  background-color: var(--colour-background);
-  padding-top: var(--unit-size-3);
-  padding-left: var(--unit-size);
-  transition: padding .25s ease, background-color .25s ease;
+    display: flex;
+    position: sticky;
+    align-items: center;
+    gap: var(--unit-size);
+    top: 0;
+    background-color: var(--colour-background);
+    padding-top: var(--unit-size-3);
+    padding-left: var(--unit-size);
+    transition:
+        padding 0.25s ease,
+        background-color 0.25s ease;
 }
 
 @media (max-width: 960px) {
-  hgroup,
-  footer {
-    top: calc(5.5 * var(--unit-size));
-    padding-top: var(--unit-size-2);
-  }
+    hgroup,
+    footer {
+        top: calc(5.5 * var(--unit-size));
+        padding-top: var(--unit-size-2);
+    }
 
-  hgroup:not(:first) {
-    padding-top: var(--unit-size-2);
-  }
+    hgroup:not(:first) {
+        padding-top: var(--unit-size-2);
+    }
 }
 
 /* Move top of sticky down for overflow of top nav increasing it's height */
 @media (max-width: 792px) {
-  hgroup,
-  footer {
-    top: calc(9.5 * var(--unit-size) - 1px);
-  } 
+    hgroup,
+    footer {
+        top: calc(9.5 * var(--unit-size) - 1px);
+    }
 }
 @media (max-width: 484px) {
-  hgroup,
-  footer {
-    top: calc(11.5 * var(--unit-size) - 1px);
-  } 
+    hgroup,
+    footer {
+        top: calc(11.5 * var(--unit-size) - 1px);
+    }
 }
 
 ::selection {
-  background-color: var(--colour-primary);
-  color: var(--colour-on-primary);
+    background-color: var(--colour-primary);
+    color: var(--colour-on-primary);
 }
 
 /* Hide from DOM, will only show to screen readers */
 .sr-only {
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
 }
 
 /* =============== Nav and Main Resizing =============== */
 
 body {
-  display: flex;
-  align-items: start;
-  gap: 0 var(--unit-size-2);
+    display: flex;
+    align-items: start;
+    gap: 0 var(--unit-size-2);
 }
 
 nav {
-  display: flex;
-  position: sticky;
-  top: -1px;
-  justify-content: space-between;
-  flex-direction: column;
-  min-width: fit-content;
-  max-width: 20.25rem;
-  box-shadow: 0 var(--unit-size-1-2) var(--unit-size-1-2) var(--colour-background);
-  gap: var(--unit-size-3);
-  z-index: 1;
-  padding: var(--unit-size-3);
-  padding-bottom: 0;
-  transition: padding .25s ease-in-out;
+    display: flex;
+    position: sticky;
+    top: -1px;
+    justify-content: space-between;
+    flex-direction: column;
+    min-width: fit-content;
+    max-width: 20.25rem;
+    gap: var(--unit-size-3);
+    z-index: 1;
+    padding: var(--unit-size-3);
+    padding-bottom: 0;
+    transition: padding 0.25s ease-in-out;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 @media (max-width: 960px) {
-  body {
-    flex-direction: column;
-  }
+    body {
+        flex-direction: column;
+    }
 
-  nav {
-    flex-flow: row wrap;
-    overflow: hidden;
-    width: 100%;
-    background-color: var(--colour-background);
-    max-width: 100%;
-    align-items: center;
-    gap: var(--unit-size) var(--unit-size-4);
-    padding: var(--unit-size-2);
-    padding-bottom: var(--unit-size-1-2);
-  }
+    nav {
+        flex-flow: row wrap;
+        overflow: hidden;
+        width: 100%;
+        background-color: var(--colour-background);
+        max-width: 100%;
+        align-items: center;
+        box-shadow: 0 var(--unit-size-1-2) var(--unit-size-1-2) var(--colour-background);
+        gap: var(--unit-size) var(--unit-size-4);
+        padding: var(--unit-size-2);
+        padding-bottom: var(--unit-size-1-2);
+    }
 }
 
 /* ==================== Nav Styling ==================== */
 
-nav>ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  gap: var(--unit-size-1-2) var(--unit-size);
+nav > ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: var(--unit-size-1-2) var(--unit-size);
 }
 
 #internal-links {
-  flex-direction: column;
+    flex-direction: column;
 }
 
 @media (max-width: 960px) {
-  #internal-links {
-    flex-direction: row;
-    align-items: start;
-  }
+    #internal-links {
+        flex-direction: row;
+        align-items: start;
+    }
 }
 
 /* ================== Section Styling ================== */
 
-section>div {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: start;
-  gap: var(--unit-size-2);
-  padding: var(--unit-size-2);
-  padding-bottom: 0;
+section > div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+    gap: var(--unit-size-2);
+    padding: var(--unit-size-2);
+    padding-bottom: 0;
 }
 
 /* =================== Card Styling ==================== */
 
 .card {
-  display: flex;
-  flex-direction: column;
-  gap: var(--unit-size-2);
-  padding: var(--unit-size-2);
-  border-radius: var(--radius-large);
-  border: 2px solid var(--colour-primary);
-  box-shadow: 0 0 10px 0 var(--colour-border);
-  flex-grow: 1;
-  max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--unit-size-2);
+    padding: var(--unit-size-2);
+    border-radius: var(--radius-large);
+    border: 2px solid var(--colour-primary);
+    box-shadow: 0 0 10px 0 var(--colour-border);
+    flex-grow: 1;
+    max-width: 100%;
 }
 
 .card-feature-image {
-  height: calc(var(--unit-size) * 16);
-  width: 100%;
-  object-fit: cover;
-  border-radius: var(--radius-small)
+    height: calc(var(--unit-size) * 16);
+    width: 100%;
+    object-fit: cover;
+    border-radius: var(--radius-small);
 }
 
 .card-heading,
 .card-description {
-  display: block;
-  color: var(--colour-text);
-  width: fit-content;
-  max-width: 100%;
-  overflow: hidden;
-  flex-grow: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  text-decoration: none;
+    display: block;
+    color: var(--colour-text);
+    width: fit-content;
+    max-width: 100%;
+    overflow: hidden;
+    flex-grow: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-decoration: none;
 }
 
 .card-detail-group {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 100%;
-  gap: var(--unit-size);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    gap: var(--unit-size);
 }
 
 .card-detail {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 100%;
-  align-items: center;
-  gap: 0 var(--unit-size);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 100%;
+    align-items: center;
+    gap: 0 var(--unit-size);
 }
 
 .card-detail > .card-detail {
-  width: fit-content;
-  gap: var(--unit-size);
+    width: fit-content;
+    gap: var(--unit-size);
 }
 
 .card-language-colour {
-  border-radius: var(--radius-full);
-  border: 1px solid var(--colour-border);
-  width: var(--unit-size);
-  height: var(--unit-size);
+    border-radius: var(--radius-full);
+    border: 1px solid var(--colour-border);
+    width: var(--unit-size);
+    height: var(--unit-size);
 }
 
 /* ================ Hero Section Styling =============== */
 
 #hero {
-  height: 100vh;
-  object-fit: cover;
-  min-width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    min-width: 100%;
+    position: relative;
+}
+
+#hero > img {
+    height: 100vh;
+    position: absolute;
+    object-fit: cover;
+    min-width: 100%;
 }
 
 @media (max-width: 960px) {
-  #hero {
-    height: calc(100vh - 5.5 * var(--unit-size));
-  }
+    #hero {
+        height: calc(100vh - 5.5 * var(--unit-size));
+    }
 }
 
 /* ================ Bio Section Styling ================ */
 
 #bio-content {
-  flex-flow: row nowrap;
-  align-items: center;
-  gap: var(--unit-size-4);
-  font-size: var(--unit-size-2);
-  line-height: var(--unit-size-3);
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: var(--unit-size-4);
+    font-size: var(--unit-size-2);
+    line-height: var(--unit-size-3);
 }
 
 #bio-content img {
-  height: 12rem;
-  aspect-ratio: 1;
-  border-radius: var(--radius-full);
-  object-fit: cover;
+    height: 12rem;
+    aspect-ratio: 1;
+    border-radius: var(--radius-full);
+    object-fit: cover;
 }
 
 @media (max-width: 700px) {
-  #bio-content {
-    flex-flow: row wrap;
-    justify-content: center;
-  }
+    #bio-content {
+        flex-flow: row wrap;
+        justify-content: center;
+    }
 }
 
 /* ======= Experience/Education Section Styling ======== */
 
 :is(#experience-content, #education-content) ol {
-  display: flex;
-  flex-direction: column;
-  gap: var(--unit-size-2);
-  list-style: none;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--unit-size-2);
+    list-style: none;
+    width: 100%;
 }
 
 :is(#experience-content, #education-content) li {
-  gap: var(--unit-size);
+    gap: var(--unit-size);
 }
 
 :is(#experience-content, #education-content) .card-detail {
-  justify-content: start;
-  gap: 0 var(--unit-size-2);
+    justify-content: start;
+    gap: 0 var(--unit-size-2);
 }
 
 :is(#experience-content, #education-content) li > .card-detail {
-  flex-wrap: nowrap;
+    flex-wrap: nowrap;
 }
 
 :is(#experience-content, #education-content) li > div {
-  width: fit-content;
+    width: fit-content;
 }
 
 :is(#experience-content, #education-content) h3 {
-  font-family: var(--font-body);
-  line-height: var(--unit-size-3);
-  font-size: var(--font-size-large);
-  text-transform: none;
+    font-family: var(--font-body);
+    line-height: var(--unit-size-3);
+    font-size: var(--font-size-large);
+    text-transform: none;
 }
 
 :is(#experience-content, #education-content) pre {
-  max-width: 100%;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+    max-width: 100%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 /* ======================= Misc ======================== */
 
 .btn {
-  width: fit-content;
-  border-radius: var(--radius-full);
-  padding: var(--unit-size-1-2) var(--unit-size-2);
-  line-height: var(--unit-size-2);
-  color: var(--colour-on-primary);
-  background-color: var(--colour-primary);
+    width: fit-content;
+    border-radius: var(--radius-full);
+    padding: var(--unit-size-1-2) var(--unit-size-2);
+    line-height: var(--unit-size-2);
+    color: var(--colour-on-primary);
+    background-color: var(--colour-primary);
 }
 
 .loader {
-  display: block;
-  border: var(--unit-size-1-2) solid var(--colour-border);
-  border-top: var(--unit-size-1-2) solid var(--colour-primary);
-  border-radius: var(--radius-full);
-  width: var(--unit-size-2);
-  aspect-ratio: 1;
-  margin: var(--unit-size-3) auto;
-  animation: spin 2s linear infinite;
+    display: block;
+    border: var(--unit-size-1-2) solid var(--colour-border);
+    border-top: var(--unit-size-1-2) solid var(--colour-primary);
+    border-radius: var(--radius-full);
+    width: var(--unit-size-2);
+    aspect-ratio: 1;
+    margin: var(--unit-size-3) auto;
+    animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
 
-  100% {
-    transform: rotate(360deg);
-  }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .html {
-  color: #e34c26;
+    color: #e34c26;
 }
 
 .css {
-  color: #563d7c;
+    color: #563d7c;
 }
 
 .ts {
-  color: #3178c6;
+    color: #3178c6;
 }
 
 /* ===================================================== */
