--- a/src/styles.css
+++ b/src/styles.css
@@ -18,8 +18,8 @@
 :root {
     color-scheme: dark;
 
-    --font-header: 'Oxygen Mono', 'Courier New', courier, monospace;
-    --font-body: 'Josefin Sans', 'Segoe UI', tahoma, geneva, verdana, sans-serif;
+    --font-mono: 'Oxygen Mono', 'Courier New', courier, monospace;
+    --font-sans: 'Josefin Sans', 'Segoe UI', tahoma, geneva, verdana, sans-serif;
     --font-size-small: 0.875rem;
     --font-size-medium: 1rem;
     --font-size-large: 1.5rem;
@@ -108,7 +108,7 @@ h6 {
 /* ===================================================== */
 
 h1 {
-    font-family: var(--font-header);
+    font-family: var(--font-mono);
     font-size: var(--font-size-xl);
     line-height: var(--unit-size-4);
 }
@@ -118,7 +118,7 @@ h3,
 a {
     display: block;
     border-radius: 2px;
-    font-family: var(--font-header);
+    font-family: var(--font-mono);
     font-size: var(--font-size-medium);
     line-height: var(--unit-size-2);
     text-transform: lowercase;
@@ -137,6 +137,11 @@ a:is(:hover, :focus-visible) {
     outline: auto;
 }
 
+[is='logo-link'] > svg {
+    width: var(--unit-size-2);
+    height: var(--unit-size-2);
+}
+
 hr {
     height: 1px;
     max-height: 1px;
@@ -150,7 +155,7 @@ span {
     width: 100%;
 }
 
-hgroup,
+.heading,
 footer {
     position: sticky;
     top: 0;
@@ -166,27 +171,27 @@ footer {
 }
 
 @media (width <= 960px) {
-    hgroup,
+    .heading,
     footer {
         top: calc(5.5 * var(--unit-size));
         padding-top: var(--unit-size-2);
     }
 
-    hgroup:not(:first-of-type) {
+    .heading:not(:first-of-type) {
         padding-top: var(--unit-size-2);
     }
 }
 
 /* Move top of sticky down for overflow of top nav increasing it's height */
 @media (width <= 792px) {
-    hgroup,
+    .heading,
     footer {
         top: calc(9.5 * var(--unit-size) - 1px);
     }
 }
 
 @media (width <= 484px) {
-    hgroup,
+    .heading,
     footer {
         top: calc(11.5 * var(--unit-size) - 1px);
     }
@@ -197,16 +202,6 @@ footer {
     color: var(--colour-on-primary);
 }
 
-/* Hide from DOM, will only show to screen readers */
-.sr-only {
-    position: absolute;
-    top: auto;
-    left: -10000px;
-    overflow: hidden;
-    width: 1px;
-    height: 1px;
-}
-
 /* =============== Nav and Main Resizing =============== */
 
 body {
@@ -215,7 +210,7 @@ body {
     align-items: flex-start;
     background-color: var(--colour-background);
     color: var(--colour-text);
-    font-family: var(--font-body);
+    font-family: var(--font-sans);
     font-size: var(--font-size-medium);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -321,7 +316,7 @@ section > div {
 
 .card-heading,
 .card-description {
-    display: block;
+    display: inline-block;
     overflow: hidden;
     width: fit-content;
     max-width: 100%;
@@ -336,7 +331,6 @@ section > div {
     display: flex;
     max-width: 100%;
     flex-direction: column;
-    align-items: center;
     gap: var(--unit-size);
 }
 
@@ -359,28 +353,6 @@ section > div {
     height: var(--unit-size);
     border: 1px solid var(--colour-border);
     border-radius: var(--radius-full);
-}
-
-/* ================ Hero Section Styling =============== */
-
-#hero {
-    position: relative;
-    min-width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-#hero > img {
-    position: absolute;
-    min-width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-@media (width <= 960px) {
-    #hero {
-        height: calc(100vh - 5.5 * var(--unit-size));
-    }
 }
 
 /* ================ Bio Section Styling ================ */
@@ -435,7 +407,7 @@ section > div {
 }
 
 :is(#experience-content, #education-content) h3 {
-    font-family: var(--font-body);
+    font-family: var(--font-sans);
     font-size: var(--font-size-large);
     line-height: var(--unit-size-3);
     text-transform: none;
