--- a/template/project.gohtml
+++ b/template/project.gohtml
@@ -16,9 +16,9 @@
     <p class="card-description">{{.Description}}</p>
     {{end}}
     {{if .Topics}}
-    <div class="card-chips chip-wrapper">
+    <div class="card-topics topic-wrapper">
         {{range .Topics}}
-        <span class="chip">{{.}}</span>
+        <span class="topic">{{.}}</span>
         {{end}}
     </div>
     {{end}}
