Add templating for index.html

--- a/api/template/project.gohtml
+++ b/api/template/project.gohtml
@@ -1,25 +1,30 @@
 <li class="card">
     <a class="card-link" href="{{.HtmlUrl}}" aria-label="{{.Title}} on {{.Host}}" target="_blank" rel="noreferrer"></a>
-    {{if and .Image.Src .Image.Alt}}
+    {{- if and .Image.Src .Image.Alt}}
     <img class="card-feature-image" src="{{.Image.Src}}" alt="{{.Image.Alt}}" height="192">
-    {{end}}
+    {{- end}}
     <div class="card-detail-section">
         <h3 class="card-title">{{.Title}}</h3>
-        <div class="card-detail" hx-get="{{.Logo}}" hx-trigger="load" hx-swap="beforeend">
-            {{if and .Language .LanguageColour}}
+        {{- if or .Language .LogoSVG}}
+        <div class="card-detail">
+            {{- if and .Language .LanguageColour}}
             <span class="card-language-colour" style="background-color: {{.LanguageColour}};"></span>
             <p class="card-language-name">{{.Language}}</p>
-            {{end}}
+            {{- end}}
+            {{- if .LogoSVG}}
+            {{ .LogoSVG }}
+            {{- end}}
         </div>
+        {{- end}}
     </div>
-    {{if .Description}}
+    {{- if .Description}}
     <p class="card-description">{{.Description}}</p>
-    {{end}}
-    {{if .Topics}}
+    {{- end}}
+    {{- if .Topics}}
     <div class="card-topics topic-wrapper">
-        {{range .Topics}}
+        {{- range .Topics}}
         <span class="topic">{{.}}</span>
-        {{end}}
+        {{- end}}
     </div>
-    {{end}}
+    {{- end}}
 </li>
